--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
   </header>
 
   <nav>
-    <a href="inicio">inicio</a>
+    <a href="index.html">inicio</a>
     <a href="productos.html">Productos</a>
-    <a href="contacto">Contacto</a>
+    <a href="contacto.html">Contacto</a>
   </nav>
 
   <div class="hero">
@@ -116,3 +116,4 @@
   </div>
 
   <section class="section" id="productos">
+    
