--- a/productos.html
+++ b/productos.html
@@ -95,7 +95,9 @@ nav a {
 </header>
 
 <nav>
-  <a href="index.html">Inicio</a>
+  <a href="index.html">inicio</a>
+    <a href="productos.html">Productos</a>
+    <a href="contacto.html">Contacto</a>
 </nav>
 
 
