--- a/contacto.html
+++ b/contacto.html
@@ -88,7 +88,7 @@
     <h2>Contáctanos</h2>
     <div class="contact-info">
       <p><strong>📧 Correo electrónico:</strong> <a href="mailto:info@woysjuguetes.com">info@woysjuguetes.com</a></p>
-      <p><strong>📱 Teléfono:</strong> <a href="tel:+34612345678">+34 640 751 581</a></p>
+      <p><strong>📱 Teléfono:</strong> <a href="tel:+34612345678"></a></p>
       <p><strong>📷 Instagram:</strong> <a href="https://www.instagram.com/woys.juguetes" target="_blank">@woysjuguetes</a></p>
     </div>
   </section>
@@ -99,3 +99,4 @@
 
 </body>
 </html>
+
